Add user blocking after failed login attempts
Implements logic to block a user after three consecutive failed login attempts. Adds a modal to inform users when their account is blocked and updates the AuthService to support blocking users and tracking user status. Refactors error handling in the HTTP interceptor to propagate errors properly.

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -27,3 +27,13 @@
     </p>
   </app-modal>
 </ng-template>
+
+<ng-template #blockedUserModal>
+  <app-modal (callConfirmationMethod)="hideModal()" [confirmAction]="'Cerrar'"
+    [title]="'Cuenta bloqueada por seguridad.'" [textCenter]="true" [icon]="'dangerous'">
+    <p class="text-bisque text-base max-w-lg">
+      Has excedido el número máximo de intentos fallidos (3) para ingresar tu contraseña. Por favor, contacta al
+      administrador para restablecer el acceso.
+    </p>
+  </app-modal>
+</ng-template>
