Add logic to manage auth-google response

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -16,5 +16,6 @@
   <button class="bg-blue-700 rounded p-1 w-2/6" type="submit">
     Sign in
   </button>
+  <app-google-auth></app-google-auth>
   <a href="/signup" class="bg-blue-700 rounded p-1 w-2/6 text-center">Go SignUp</a>
 </form>
