Fix google button

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -48,11 +48,7 @@
         <span class="mx-2 text-zorba">O conéctate con</span>
         <hr class="flex-grow border-zorba" />
       </div>
-      <button
-        class="flex items-center justify-center border-2 border-zorba rounded-md py-2 w-full mb-2 hover:bg-zorba transition-colors">
-        <img src="https://img.icons8.com/color/48/000000/google-logo.png" alt="Google" class="w-5 h-5 mr-2" />
-        <span class="text-bisque">Google</span>
-      </button>
+      <app-google-auth></app-google-auth>
       <p class="text-zorba text-center mt-4">
         ¿No eres miembro?
         <a href="/signup" class="text-flamenco font-semibold hover:underline">Regístrate</a>
