--- a/src/app/components/my-account/my-account.component.html
+++ b/src/app/components/my-account/my-account.component.html
@@ -1,5 +1,12 @@
-<div class="h-full w-full flex items-center justify-end">
-  <div class="h-fit w-fit pr-3">
-    <span class="text-bisque">{{userName}}</span>
-  </div>
+<div class="h-full flex items-center justify-end pr-6">
+  <a routerLink="/app/profile"
+    class="flex items-center gap-2 cursor-pointer">
+    <div
+      class="flex items-center justify-center w-8 h-8 rounded-full bg-bisque text-crater-brown font-bold">
+      {{ userName.charAt(0) }}
+    </div>
+    <span class="text-bisque font-semibold">
+      {{ userName }} {{ lastname }}
+    </span>
+  </a>
 </div>
