Add new changes

--- a/src/app/components/user/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/user/reset-password-form/reset-password-form.component.html
@@ -1,65 +1,118 @@
-<form [formGroup]="form" class="max-w-2xl mx-auto rounded-md bg-crater-brown p-8 text-bisque">
-  <div>
-    <h1 class="text-bisque text-xl font-bold">Cambiar contraseña</h1>
-  </div>
+<form [formGroup]="form">
+  <div class="flex items-center justify-center">
+    <div class="bg-crater-brown rounded-md p-8 w-full max-w-3xl min-w-[550px]">
+      <h1 class="text-bisque text-xl font-bold mb-4">Cambiar contraseña</h1>
 
-    <div class="flex flex-col space-y-4 mt-5">
-      <div class="w-full">
-        <label class="block my-2 text-base font-bold text-bisque" for="currentPassword">Contraseña actual<span class="text-burnt-umber">*</span></label>
-        <input id="currentPassword" formControlName="currentPassword" type="text"
-          class="bg-crater-brown border-2 border-zorba text-bisque text-base rounded-md block w-full p-2 font-bold placeholder:text-zorba placeholder:font-bold"
-          placeholder="Ingresa su contraseña actual">
-        <div class="min-h-[1.5rem]">
-          @if (form.controls['currentPassword'].invalid && (form.controls['currentPassword'].dirty || form.controls['currentPassword'].touched)) {
-            <p class="text-burnt-umber">Este campo es obligatorio</p>
-          }
+      <div class="flex flex-col space-y-6">
+        <div class="w-full">
+          <label class="block mb-2 text-base font-bold text-bisque" for="currentPassword">
+            Contraseña actual <span class="text-burnt-umber">*</span>
+          </label>
+          <div class="relative">
+            <input 
+              [type]="showCurrentPassword ? 'text' : 'password'" 
+              formControlName="currentPassword" id="currentPassword"
+              class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba placeholder:font-bold rounded-md p-2 pr-10 w-full font-bold focus:outline-none focus:border-golden-glow"
+              placeholder="********"
+              [ngClass]="{
+                'border-flamenco': form.controls['currentPassword'].invalid && form.controls['currentPassword'].touched,
+                'border-golden-glow': form.controls['currentPassword'].valid && form.controls['currentPassword'].touched
+              }"
+            />
+            <button 
+              type="button" 
+              (click)="showCurrentPassword = !showCurrentPassword"
+              class="absolute right-2 top-1/2 -translate-y-1/2 text-zorba">
+              <span class="material-symbols-rounded select-none">
+                {{ showCurrentPassword ? 'visibility_off' : 'visibility' }}
+              </span>
+            </button>
+          </div>
+          <div class="min-h-[1.5rem]">
+            @if (form.controls['currentPassword'].invalid && (form.controls['currentPassword'].dirty || form.controls['currentPassword'].touched)) {
+              <p class="text-burnt-umber text-sm">Este campo es obligatorio</p>
+            }
+          </div>
         </div>
-      </div>
 
-      <div class="w-full">
-        <label class="block my-2 text-base font-bold text-bisque" for="password">Contraseña<span class="text-burnt-umber">*</span></label>
-        <input id="password" formControlName="password" type="showPassword ? 'text' : 'password'"
-          class="bg-crater-brown border-2 border-zorba text-bisque text-base rounded-md block w-full p-2 font-bold placeholder:text-zorba placeholder:font-bold"
-          placeholder="Ingresa su nueva contraseña">
-        <div class="min-h-[1.5rem]">
-          @if (form.controls['password'].invalid && (form.controls['password'].dirty || form.controls['password'].touched)) {
-            <p class="text-burnt-umber">Este campo es obligatorio</p>
-          }
+        <div class="w-full">
+          <label class="block mb-2 text-base font-bold text-bisque" for="password">
+            Nueva contraseña <span class="text-burnt-umber">*</span>
+          </label>
+          <div class="relative">
+            <input 
+              [type]="showNewPassword ? 'text' : 'password'" 
+              formControlName="password" id="password"
+              class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba placeholder:font-bold rounded-md p-2 pr-10 w-full font-bold focus:outline-none focus:border-golden-glow"
+              placeholder="********"
+              [ngClass]="{
+                'border-flamenco': form.controls['password'].invalid && form.controls['password'].touched,
+                'border-golden-glow': form.controls['password'].valid && form.controls['password'].touched
+              }"
+            />
+            <button type="button" (click)="showNewPassword = !showNewPassword"
+              class="absolute right-2 top-1/2 -translate-y-1/2 text-zorba">
+              <span class="material-symbols-rounded select-none">
+                {{ showNewPassword ? 'visibility_off' : 'visibility' }}
+              </span>
+            </button>
+          </div>
+          <div class="min-h-[1.5rem]">
+            @if (form.controls['password'].invalid && (form.controls['password'].dirty || form.controls['password'].touched)) {
+              <p class="text-burnt-umber text-sm">Este campo es obligatorio</p>
+            }
+          </div>
         </div>
-      </div>
 
-       <div class="w-full">
-        <label class="block my-2 text-base font-bold text-bisque" for="confirmPassword">Confirmar contraseña<span class="text-burnt-umber">*</span></label>
-        <input id="confirmPassword" formControlName="confirmPassword" type="text"
-          class="bg-crater-brown border-2 border-zorba text-bisque text-base rounded-md block w-full p-2 font-bold placeholder:text-zorba placeholder:font-bold"
-          placeholder="Confirme su nueva contraseña">
+        <div class="w-full">
+          <label class="block mb-2 text-base font-bold text-bisque" for="confirmPassword">
+            Confirmar contraseña <span class="text-burnt-umber">*</span>
+          </label>
+          <div class="relative">
+            <input 
+              [type]="showConfirmPassword ? 'text' : 'password'" 
+              formControlName="confirmPassword" id="confirmPassword"
+              class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba placeholder:font-bold rounded-md p-2 pr-10 w-full font-bold focus:outline-none focus:border-golden-glow"
+              placeholder="********"
+              [ngClass]="{
+                'border-flamenco': form.controls['confirmPassword'].invalid && form.controls['confirmPassword'].touched,
+                'border-golden-glow': form.controls['confirmPassword'].valid && form.controls['confirmPassword'].touched
+              }"
+            />
+            <button type="button" (click)="showConfirmPassword = !showConfirmPassword"
+              class="absolute right-2 top-1/2 -translate-y-1/2 text-zorba">
+              <span class="material-symbols-rounded select-none">
+                {{ showConfirmPassword ? 'visibility_off' : 'visibility' }}
+              </span>
+            </button>
+          </div>
           <div class="min-h-[1.5rem]">
             @if(form.controls['confirmPassword'].invalid && (form.controls['confirmPassword'].dirty || form.controls['confirmPassword'].touched)){
-            <p class="text-burnt-umber">Este campo es obligatorio</p>
+              <p class="text-burnt-umber text-sm">Este campo es obligatorio</p>
             }
-          <p *ngIf="passwordError" 
-          class="text-burnt-umber text-center font-bold">
-            {{ passwordError }}
-        </p>
+            <p *ngIf="passwordError" class="text-burnt-umber text-center font-bold">
+              {{ passwordError }}
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-    
-    <div class="col-span-2 flex justify-center items-center w-full mt-4">
-      <button 
-        (click)="resetPassword($event)" 
-        [disabled]="form.invalid"
-        class="bg-flamenco text-bisque py-1 px-3 rounded-md cursor-pointer disabled:bg-flamenco disabled:opacity-80 disabled:cursor-not-allowed font-bold"
-        type="button"
-        >Guardar
-      </button>
 
-      <button 
-        (click)="cancel()"
-        class="bg-golden-glow text-crater-brown py-1 px-3 rounded-md cursor-pointer ml-2 font-bold"
-        type="button"
-        >
-        Cancelar
-      </button>
+      <div class="flex justify-center mt-5 space-x-6">
+        <button 
+          (click)="resetPassword($event)" 
+          [disabled]="form.invalid"
+          class="bg-flamenco text-bisque py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed"
+          type="button">
+          Guardar
+        </button>
+
+        <button 
+          (click)="cancel()"
+          class="bg-golden-glow text-crater-brown py-2 px-3 rounded-md cursor-pointer font-bold hover:bg-bisque transition-colors"
+          type="button">
+          Cancelar
+        </button>
+      </div>
     </div>
+  </div>
 </form>
