--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -3,29 +3,24 @@
     <div>
       <h1 class="text-bisque text-xl font-bold">Perfil del usuario</h1>
     </div>
-    <form [formGroup]="userForm" class="space-y-10 mt-10">
+    <form [formGroup]="userForm" class="space-y-10">
       <div class="grid grid-cols-1 md:grid-cols-3 gap-x-10 gap-y-14 mb-14">
         <div class="pb-1 border-b border-zorba">
           <label class="block my-2 text-base font-bold text-bisque" for="name"
-            >Nombre</label
-          >
+            >Nombre</label>
           <input
             *ngIf="isEditing"
             formControlName="name"
             class="bg-crater-brown text-bisque text-base w-full font-bold bg-transparent border-none outline-none"
-            type="text"
-          />
+            type="text"/>
           <div
             *ngIf="
               isEditing &&
               userForm.get('name')?.invalid &&
-              userForm.get('name')?.touched
-            "
-            class="text-burnt-umber"
-          >
+              userForm.get('name')?.touched"
+            class="text-burnt-umber">
             <span *ngIf="userForm.get('name')?.errors?.['required']"
-              >Este campo es obligatorio</span
-            >
+              >Este campo es obligatorio</span>
           </div>
           <p class="text-base font-bold" *ngIf="!isEditing">
             {{ currentUser.name ?? "No disponible" }}
@@ -36,25 +31,20 @@
           <label
             class="block my-2 text-base font-bold text-bisque"
             for="lastname"
-            >Primer Apellido</label
-          >
+            >Primer Apellido</label>
           <input
             *ngIf="isEditing"
             formControlName="lastname"
             class="bg-crater-brown text-bisque text-base w-full font-bold bg-transparent border-none outline-none"
-            type="text"
-          />
+            type="text"/>
           <div
             *ngIf="
               isEditing &&
               userForm.get('lastname')?.invalid &&
-              userForm.get('lastname')?.touched
-            "
-            class="text-burnt-umber"
-          >
+              userForm.get('lastname')?.touched"
+            class="text-burnt-umber">
             <span *ngIf="userForm.get('lastname')?.errors?.['required']"
-              >Este campo es obligatorio</span
-            >
+              >Este campo es obligatorio</span>
           </div>
           <p class="text-base font-bold" *ngIf="!isEditing">
             {{ currentUser.lastname ?? "No disponible" }}
@@ -64,56 +54,45 @@
         <div class="pb-1 border-b border-zorba">
           <label
             class="block my-2 text-base font-bold text-bisque"
-            for="lastname"
-            >Primer Apellido</label
-          >
+            for="lastname2"
+            >Segundo Apellido</label>
           <input
             *ngIf="isEditing"
-            formControlName="lastname"
+            formControlName="lastname2"
             class="bg-crater-brown text-bisque text-base w-full font-bold bg-transparent border-none outline-none"
-            type="text"
-          />
+            type="text"/>
           <div
             *ngIf="
               isEditing &&
-              userForm.get('lastname')?.invalid &&
-              userForm.get('lastname')?.touched
-            "
-            class="text-burnt-umber"
-          >
-            <span *ngIf="userForm.get('lastname')?.errors?.['required']"
-              >Este campo es obligatorio</span
-            >
+              userForm.get('lastname2')?.invalid &&
+              userForm.get('lastname2')?.touched"
+            class="text-burnt-umber">
+            <span *ngIf="userForm.get('lastname2')?.errors?.['required']"
+              >Este campo es obligatorio</span>
           </div>
           <p class="text-base font-bold" *ngIf="!isEditing">
-            {{ currentUser.lastname ?? "No disponible" }}
+            {{ currentUser.lastname2 ?? "No disponible" }}
           </p>
         </div>
 
         <div class="pb-1 border-b border-zorba">
-          <label class="block my-2 text-base font-bold text-bisque" for="cedula"
-            >Cédula</label
-          >
+          <label class="block my-2 text-base font-bold text-bisque" for="cedula">Cédula</label>
           <input
             *ngIf="isEditing"
-            formControlName="cedula"
+            formControlName="identification"
             class="bg-crater-brown text-bisque text-base w-full font-bold bg-transparent border-none outline-none"
-            type="text"
-          />
+            type="text"/>
           <div
             *ngIf="
               isEditing &&
-              userForm.get('cedula')?.invalid &&
-              userForm.get('cedula')?.touched
-            "
-            class="text-burnt-umber"
-          >
-            <span *ngIf="userForm.get('cedula')?.errors?.['required']"
-              >Este campo es obligatorio</span
-            >
+              userForm.get('identification')?.invalid &&
+              userForm.get('identification')?.touched"
+            class="text-burnt-umber">
+            <span *ngIf="userForm.get('identification')?.errors?.['required']"
+              >Este campo es obligatorio</span>
           </div>
           <p class="text-base font-bold" *ngIf="!isEditing">
-            {{ currentUser.cedula ?? "No disponible" }}
+            {{ currentUser.identification ?? "No disponible" }}
           </p>
         </div>
 
@@ -121,25 +100,20 @@
           <label
             class="block my-2 text-base font-bold text-bisque"
             for="birthDate"
-            >Fecha de nacimiento</label
-          >
+            >Fecha de nacimiento</label>
           <input
             *ngIf="isEditing"
             formControlName="birthDate"
             class="bg-crater-brown text-bisque text-base w-full font-bold bg-transparent border-none outline-none"
-            type="date"
-          />
+            type="date"/>
           <div
             *ngIf="
               isEditing &&
               userForm.get('birthDate')?.invalid &&
-              userForm.get('birthDate')?.touched
-            "
-            class="text-burnt-umber"
-          >
+              userForm.get('birthDate')?.touched"
+            class="text-burnt-umber">
             <span *ngIf="userForm.get('birthDate')?.errors?.['required']"
-              >Este campo es obligatorio</span
-            >
+              >Este campo es obligatorio</span>
           </div>
           <p class="text-base font-bold" *ngIf="!isEditing">
             {{ currentUser.birthDate ?? "No disponible" }}
@@ -148,25 +122,20 @@
 
         <div class="pb-1 border-b border-zorba">
           <label class="block my-2 text-base font-bold text-bisque" for="email"
-            >Correo electrónico</label
-          >
+            >Correo electrónico</label>
           <input
             *ngIf="isEditing"
             formControlName="email"
             class="bg-crater-brown text-bisque text-base w-full font-bold bg-transparent border-none outline-none"
-            type="email"
-          />
+            type="email"/>
           <div
             *ngIf="
               isEditing &&
               userForm.get('email')?.invalid &&
-              userForm.get('email')?.touched
-            "
-            class="text-burnt-umber"
-          >
+              userForm.get('email')?.touched"
+            class="text-burnt-umber">
             <span *ngIf="userForm.get('email')?.errors?.['required']"
-              >Este campo es obligatorio</span
-            >
+              >Este campo es obligatorio</span>
           </div>
           <p class="text-base font-bold" *ngIf="!isEditing">
             {{ currentUser.email ?? "No disponible" }}
@@ -179,14 +148,12 @@
           class="bg-flamenco text-bisque py-1 px-3 rounded-md cursor-pointer disabled:bg-flamenco disabled:opacity-80 disabled:cursor-not-allowed font-bold"
           *ngIf="!isEditing"
           type="button"
-          (click)="editForm()"
-        >
+          (click)="editForm()">
           Editar
         </button>
         <div
           class="bg-flamenco text-bisque py-1 px-3 rounded-md cursor-pointer disabled:bg-flamenco disabled:opacity-80 disabled:cursor-not-allowed font-bold"
-          *ngIf="!isEditing"
-        >
+          *ngIf="!isEditing">
           <a routerLink="/app/reset-password"> Cambiar contraseña</a>
         </div>
         <button
@@ -195,8 +162,7 @@
           class="bg-flamenco text-bisque py-1 px-3 rounded-md cursor-pointer disabled:bg-flamenco disabled:opacity-80 disabled:cursor-not-allowed font-bold"
           type="button"
           (click)="saveChanges()"
-          [disabled]="userForm.invalid"
-        >
+          [disabled]="userForm.invalid">
           Guardar
         </button>
         <button
@@ -204,8 +170,7 @@
           id="cancelar"
           class="px-3 py-1 bg-bisque text-crater-brown rounded-md disabled:opacity-80 disabled:cursor-not-allowed font-bold"
           type="button"
-          (click)="cancelChanges()"
-        >
+          (click)="cancelChanges()">
           Cancelar
         </button>
       </div>
