Add new version of user profile

--- a/src/app/components/user/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/user/reset-password-form/reset-password-form.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
   <div class="flex items-center justify-center">
     <div class="bg-crater-brown rounded-md p-8 w-full max-w-3xl min-w-[550px]">
-      <h1 class="text-bisque text-xl font-bold mb-4">Cambiar contraseña</h1>
+      <h1 class="text-bisque text-xl font-bold mb-10 text-center">Cambiar contraseña</h1>
 
       <div class="flex flex-col space-y-6">
         <div class="w-full">
@@ -12,7 +12,7 @@
             <input 
               [type]="showCurrentPassword ? 'text' : 'password'" 
               formControlName="currentPassword" id="currentPassword"
-              class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba placeholder:font-bold rounded-md p-2 pr-10 w-full font-bold focus:outline-none focus:border-golden-glow"
+              class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba placeholder:font-bold rounded-md p-1 pr-10 w-full font-bold focus:outline-none focus:border-golden-glow"
               placeholder="********"
               [ngClass]="{
                 'border-flamenco': form.controls['currentPassword'].invalid && form.controls['currentPassword'].touched,
@@ -43,7 +43,7 @@
             <input 
               [type]="showNewPassword ? 'text' : 'password'" 
               formControlName="password" id="password"
-              class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba placeholder:font-bold rounded-md p-2 pr-10 w-full font-bold focus:outline-none focus:border-golden-glow"
+              class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba placeholder:font-bold rounded-md p-1 pr-10 w-full font-bold focus:outline-none focus:border-golden-glow"
               placeholder="********"
               [ngClass]="{
                 'border-flamenco': form.controls['password'].invalid && form.controls['password'].touched,
@@ -72,7 +72,7 @@
             <input 
               [type]="showConfirmPassword ? 'text' : 'password'" 
               formControlName="confirmPassword" id="confirmPassword"
-              class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba placeholder:font-bold rounded-md p-2 pr-10 w-full font-bold focus:outline-none focus:border-golden-glow"
+              class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba placeholder:font-bold rounded-md p-1 pr-10 w-full font-bold focus:outline-none focus:border-golden-glow"
               placeholder="********"
               [ngClass]="{
                 'border-flamenco': form.controls['confirmPassword'].invalid && form.controls['confirmPassword'].touched,
