Fix profile data load

--- a/src/app/components/user/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/user/reset-password-form/reset-password-form.component.html
@@ -87,12 +87,14 @@
             </button>
           </div>
           <div class="min-h-[1.5rem]">
-            @if(form.controls['confirmPassword'].invalid && (form.controls['confirmPassword'].dirty || form.controls['confirmPassword'].touched)){
+            @if (form.controls['confirmPassword'].invalid && (form.controls['confirmPassword'].dirty || form.controls['confirmPassword'].touched)){
               <p class="text-burnt-umber text-sm">Este campo es obligatorio</p>
             }
-            <p *ngIf="passwordError" class="text-burnt-umber text-center font-bold">
+            @if (passwordError) {
+            <p class="text-burnt-umber text-center font-bold">
               {{ passwordError }}
             </p>
+            }
           </div>
         </div>
       </div>
