--- a/src/app/pages/upload-invoices/upload-invoices.component.html
+++ b/src/app/pages/upload-invoices/upload-invoices.component.html
@@ -10,17 +10,41 @@
             </span>
         </button>
     </div>
-    <div [ngClass]="{'grid grid-cols-2 gap-4': hideImportInvoices}" class="w-full px-4">
-        <div class="p-6 rounded-md h-full w-full flex flex-col justify-center items-center bg-crater-brown">
+
+    <!-- Estructura principal -->
+    <div class="w-full h-full px-4"
+        [ngClass]="hideImportInvoicesVar ? 'grid grid-cols-2 gap-4' : 'flex justify-center items-center'">
+
+        <!-- Columna izquierda: el formulario SIEMPRE está -->
+        <div class="p-6 rounded-md h-full w-full flex justify-center items-center bg-crater-brown"
+            [ngClass]="hideImportInvoicesVar ? '' : 'max-w-4xl'">
+            <app-manual-invoices-form [invoiceForm]="invoiceForm" [detailForm]="detailForm"
+                [responseScan]="ocrService.responseScan$" (callResetScanMethod)="ocrService.resetResponseScan()"
+                (callSavedMethod)="saveInvoice($event)" />
         </div>
 
+        <!-- Columna derecha: sólo si se está importando -->
         @if(hideImportInvoicesVar) {
-        <div class="p-6 rounded-md h-full w-full flex flex-col justify-center items-stretch bg-crater-brown">
-            <div class="flex flex-col items-center justify-center space-y-4 w-full">
-                @if(ocrService.isLoading$()){<app-llama-loader></app-llama-loader>}
-                <app-input-file-form class="w-full" [isLoading]="ocrService.isLoading$"
-                    (callScanMethod)="ocrService.scanFile($event)" (callOpenModalMethod)="openModal()" />
+        <div class="p-6 rounded-md h-full w-full flex flex-col justify-center items-center bg-crater-brown">
+
+            @if(ocrService.isLoading$()) {
+            <app-llama-loader></app-llama-loader>
+            } @else {
+            <div class="flex items-center justify-between w-full">
+                <h2 class="text-2xl font-bold text-bisque">Escanear factura</h2>
+                <label for="Toggle3"
+                    class="inline-flex items-center rounded-md cursor-pointer font-bold text-crater-brown"
+                    (change)="changeType(type)">
+                    <input id="Toggle3" type="checkbox" class="hidden peer">
+                    <span class="px-4 py-2 rounded-l-md dark:bg-bisque peer-checked:dark:bg-zorba">Ingreso</span>
+                    <span class="px-4 py-2 rounded-r-md dark:bg-zorba peer-checked:dark:bg-bisque">Gasto</span>
+                </label>
             </div>
+            }
+            <app-input-file-form [ngClass]="[ocrService.isLoading$() ? '' : 'h-full w-full']"
+                [isLoading]="ocrService.isLoading$" (callScanMethod)="ocrService.scanFile($event, type)"
+                (callOpenModalMethod)="openModal()" />
+
         </div>
         }
     </div>
